# pes_apiv1

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: tests.yml
compose/: Dockerfile  docker-compose.ci.yml
compose/local/: .env.example  docker-compose.yml
compose/local/init-db/: 01-cmdb_a2-part.sql
compose/production/: docker-compose.yml
compose/stage/: .env.example  docker-compose.yml
deploy/: docker-compose.dev.yml
pes_apiv1/: __init__.py  __main__.py  gunicorn_runner.py  log.py  settings.py
pes_apiv1/db/: base.py  utils.py
pes_apiv1/db/dao/: dummy_dao.py  loan_dao.py  loan_status_dao.py  loan_type_dao.py  person_dao.py
pes_apiv1/db/migrations/: env.py
pes_apiv1/db/migrations/versions/: 2021-08-16-16-53_819cbf6e030b.py  2021-08-16-16-55_2b7380507a71.py  2025-07-14-18-31_91c79b49779c.py
pes_apiv1/db/models/: __init__.py  dummy_model.py  loan.py  loan_list.py  loan_status.py  loan_type.py  natural_person.py  person_attribute.py  person_attribute_type.py
pes_apiv1/services/: __init__.py
pes_apiv1/web/: __init__.py  application.py  lifespan.py
pes_apiv1/web/api/: __init__.py  router.py
pes_apiv1/web/api/dummy/: __init__.py  views.py
pes_apiv1/web/api/echo/: __init__.py  views.py
pes_apiv1/web/api/loan/: schema.py  views.py
pes_apiv1/web/api/monitoring/: __init__.py
tests/: __init__.py  conftest.py  test_dummy.py
